manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovannlyna-nginx-timeoutttttt-service
spec:
  type: NodePort
  selector:
    app: sovannlyna-nginx-timeoutttttt
  ports:
    - protocol: TCP
      port: 8120
      targetPort: 3000
