manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sovannlyna-nginx-timeoutttttt-https-ingress
  namespace: sovannlyna-nginx-timeoutttttt
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sovannlyna-nginx-timeoutttttt.assessify.org
      secretName: sovannlyna-nginx-timeoutttttt-secret-tls
  rules:
    - host: sovannlyna-nginx-timeoutttttt.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sovannlyna-nginx-timeoutttttt-service
                port:
                  number: 8120
